--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -78,5 +78,8 @@
     <ClCompile Include="11724_DFS연결요소의개수.cpp">
       <Filter>소스 파일\탐색</Filter>
     </ClCompile>
+    <ClCompile Include="2023_신기한소수.cpp">
+      <Filter>소스 파일\탐색</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
