--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -81,5 +81,11 @@
     <ClCompile Include="2023_신기한소수.cpp">
       <Filter>소스 파일\탐색</Filter>
     </ClCompile>
+    <ClCompile Include="13023_친구관계파악.cpp">
+      <Filter>소스 파일\탐색</Filter>
+    </ClCompile>
+    <ClCompile Include="1260_DFS와BFS.cpp">
+      <Filter>소스 파일\탐색</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
